# kimu

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
docs/baking/: recipes.md  sourdough.md
docs/electronics/: components.md  projects.md
docs/music/: gear.md  guitar.md  theory.md
imgs/: index.html  mp4togif.sh
src/kimu/: index.html  launcher.py  server.py
src/kimu/static/: styles.css
src/kimu/static/fonts/: fonts.css
src/kimu/static/js/: api.js  buffers.js  config.js  dom.js  folder.js  icons.js  main.js  mermaid.js  pane.js  quit.js  reader.js  render.js  router.js  search.js  sidebar.js  store.js  theme.js  toc.js  watch.js
