[project]
name = "kimu"
version = "0.1.0"
description = "Kimu — local markdown doc viewer"
requires-python = ">=3.10"
# Uses only the Python standard library — no dependencies.
dependencies = []

[project.scripts]
kimu = "kimu.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kimu"]
